--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
+    "fslightbox-react": "^1.6.2-2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.0",
+    "react-status-alert": "^1.1.2",
+    "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
