--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-status-alert": "^1.1.2",
     "sass": "^1.49.9",
