--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "fslightbox-react": "^1.6.2-2",
+    "isotope-layout": "^3.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
@@ -17,6 +18,8 @@
     "react-scripts": "5.0.0",
     "react-status-alert": "^1.1.2",
     "sass": "^1.49.9",
+    "simple-react-lightbox": "^3.6.9-0",
+    "walletconnect": "^1.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
