--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "fslightbox-react": "^1.6.2-2",
     "isotope-layout": "^3.0.6",
