--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.3",
     "fslightbox-react": "^1.6.2-2",
     "isotope-layout": "^3.0.6",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-multi-carousel": "^2.8.0",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-status-alert": "^1.1.2",
     "sass": "^1.49.9",
