--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
     "react-status-alert": "^1.1.2",
     "sass": "^1.49.9",
     "simple-react-lightbox": "^3.6.9-0",
